sass/main.scss
@import "breakpoint";   
@import "susy";     
@import "compass/utilities/general/clearfix";
@import "compass/reset";

$large-screen: 960px;
$header-bg-color: #26596A;
$blog-title-h1-height: 70px;

a {
    text-decoration: none;
    &:hover {
        text-decoration: underline;
    }
}
body {
    @include container();
    font-family: "Trebuchet MS", "Tahoma", "Verdana", "Georgia";
    @include breakpoint($large-screen) {
        max-width: $large-screen;
        overflow-x: hidden;
    }

    > header a {
        color: #A1A1A1;
    }
    > header {
        color: #C1C1C1;
        background-color: $header-bg-color;
        @include breakpoint($large-screen) {
            background-image: url('../img/backgrounds/pajarito_picando_playa_halfmoonbay.JPG');
            background-position: center;
            margin-left: -600px;
            margin-right: -600px;
            height: 600px;
        }
        //@include span(1 of 1);
        @include clearfix();
        > div {
            @include breakpoint($large-screen) {
                max-width: $large-screen;
                padding-left: 50%;
                padding-right: 25%;
                margin-left: -$large-screen/2;
                background-color: rgba(0, 0, 0, 0.08);
            }
            @include clearfix();
            //@include span(1 of 1);
            > h1, > h2 {
                @include breakpoint($large-screen) {
                    @include span(1 at 1 of (1.3 1) 0.05);
                }
                @include span(1 of 1);
            }
            > h1 {
                $title-font-size: 0.8*$blog-title-h1-height;
                $title-leeway: 0.2*$blog-title-h1-height;
                @include breakpoint($large-screen) {
                    height: $blog-title-h1-height;
                    line-height: 1em;
                    text-align: left;
                }
                text-align: center;
                font-size: $title-font-size;
                vertical-align: middle;
                &::before {
                    display: inline-block;
                    background-image: url('../img/yo-400x400.jpeg');
                    background-size: $title-font-size $title-font-size;
                    border-radius: 50%;
                    border-style: solid;
                    border-width: 2px;
                    border-color: #CCC;
                    width: $title-font-size;
                    height: $title-font-size;
                    content: " ";
                    margin-right: 10px;
                    margin-bottom: $title-leeway*3/4;
                    vertical-align: middle;
                }
                a {
                    @include breakpoint($large-screen) {
                        display: inline;
                    }
                    display: block;
                }
            }
            > h2 {
                line-height: 1.1em;
                @include breakpoint($large-screen) {
                    text-align:left;
                    margin-top: 0;
                    margin-bottom: 0;
                }
                margin-top: 1em;
                margin-bottom: 1em;
                text-align:center;
            }
            > dl {
                @include breakpoint($large-screen) {
                    @include span(1 at 2 of (1.3 1) 0.05 last);
                    margin-top: -$blog-title-h1-height;
                    white-space: normal;
                    text-align: left;
                    background-color: initial;
                }
                background-color: rgba(256, 256, 256, 0.1);
                white-space: pre;
                text-align: center;
                @include span(1 of 1);
                > dt {
                    &:after {
                        content: ":";
                    }
                    @include breakpoint($large-screen) {
                        @include span(1 at 1 of (1 3));
                        display: block;
                        clear: both;
                    }
                    display: inline;
                }
                > dd {
                    @include breakpoint($large-screen) {
                        @include span(1 at 2 of (1 3) last);
                        display: block;
                        &:after {
                            content: "";
                        }
                    }
                    display: inline;
                    &:after {
                        content: "\A";
                    }
                }
            }
        }
    }
    > main, > footer {
        h1, h2, h3, h4, h5, p, ul, li, div {
            margin: 1em 10px;
            line-height: 1.3em;
        }
        article > h2 {
            font-size: 1.5em!important;
        } 
    }
    > main {
        @include breakpoint($large-screen) {
            @include span(1 at 1 of (3 1));
        }
        @include span(1 of 1);
        margin-top: gutter();
    }
    > footer {
        @include breakpoint($large-screen) {
            @include span(1 at 2 of (3 1) last);
        }
        @include span(1 of 1);
        margin-top: gutter();
    }
}

ul.posts > li {
    &:first-of-type {
        border-top: 0px none white;
    }
    border-top: 1px solid #A1A1A1;
    margin-bottom: gutter();
}

section.post {
    h1 {
        font-weight: bold;
        font-size: 1.5em;
    }
    h2 {
        font-weight: bold;
        font-size: 1.2em;
    }
    ul {
        list-style-type: disc;
    }
    ol {
        list-style-type: decimal;
    }
}

.hljs, pre > code {
    @include breakpoint($large-screen) {
        margin-left: -600px;
        margin-right: -600px;
        padding-left: 600px!important;
    }
}
code {
    font-family: courier, monospace
}
pre > code {
    display: block;
    background: none repeat scroll 0% 0% #F0F0F0;
    @include breakpoint($large-screen) {
        overflow-x: visible;
    }
    overflow-x: scroll;
}

